# IT4853

./: Bai 01 Cac khai niem co ban.ppt  Bai 01 Cac khai niem co ban.pptx  Bai 04 Mô hình không gian vec-tơ.odp  Bai 08 Đánh giá kết quả  tìm kiếm_phần 2.odp  Bai 08 Đánh giá kết quả  tìm kiếm_phần 2.ppt  Bai 12 Cac phuong phap xay dung chi muc.odp  Bai 14 Phan lop van ban_p1.odp  Bai 15 Phan lop van ban_p2.odp  Bai 15 Phan lop van ban_p2.pptx  Bai 4 Mô hình không gian vec-tơ.ppt  Bai 4 Mô hình không gian vec-tơ.pptx  Bai 8 Đánh giá kết quả  tìm kiếm_phần 2.pptx  Bài 03 Xử lý từ truy vấn.odp  Bài 3 Xử lý từ truy vấn.ppt  Bài 3 Xử lý từ truy vấn.pptx  README.md
2k8hk1/: inpg13.txt  kshttt.txt
BTL/: baove.txt
DSSV/: ds2k7hk2.txt
Demo/: CMakeLists.txt  boolean_query.sh  cran.all.1400.oneline  indexer.cc  jsrendered_crawling_test.html  ld_main.cc  searcher.cc
Demo/algorithm/: CMakeLists.txt  files.cc  files.h  files_main.cc  files_ut.cc  intersect.h  intersect_main.cc  intersect_ut.cc  utilities.cc  utilities.h  utilities_ut.cc
Demo/algorithm/resources/: files.h  files.h.in  tokenized_text1.txt
Demo/compression/: CMakeLists.txt  file_utilities.cc  file_utilities.h  front_coding.cc  gamma.cc  generator.cc  vb_encode.cc
Demo/data/docs/: doc2.tok  doc3.tok  doc4.tok
Demo/data/docs2/: d10.txt  d11.txt  d12.txt  d13.txt  d8.txt  d9.txt
Demo/docs/: doc1.tok  doc5.tok
Demo/docs2/: d1.txt  d14.txt  d15.txt  d2.txt  d3.txt  d4.txt  d5.txt  d6.txt  d7.txt
Demo/graph/plot/: CMakeLists.txt  combine2.cc
Demo/intersection/positional/: CMakeLists.txt  pp_intersect.cc
Demo/intersection/simple/: CMakeLists.txt  base.h  benchmark.cc  data.cc  data.h  naive.cc  naive.h  running_example.txt  sorted.cc  sorted.h
Demo/lucenedemo/: pom.xml
Demo/lucenedemo/src/main/java/com/mycompany/lucenedemo/: IndexFiles.java  SearchFiles.java
Demo/models/: CMakeLists.txt  base.cc  base.h  config.cc  config.h  index.cc  index.h  parser.cc  parser.h  query.cc  query.h  tokenizer.cc  tokenizer.h  vsm.cc
Demo/models/data/: example1.txt
Demo/mse/: CMakeLists.txt  base.h  conversions.cc  conversions.h  dictionary.cc  dictionary.h  dictionary_main.cc  files_iterator.cc  files_iterator.h  index_constant.cc  index_constant.h  index_reader.cc  index_reader.h  index_writer.cc  index_writer.h  indexer.cc  intersect.h  intersect_main.cc  intersect_ut.cc  inverted_index.cc  inverted_index.h  ld_main.cc  query_parser.cc  query_parser.h  searcher.cc  stick_tokenizer.cc  stick_tokenizer.h  stick_tokenizer_ut.cc  token.cc  token.h  utilities.cc  utilities.h  utilities_ut.cc  vsm_query.cc  vsm_query.h
Demo/mse/resources/: files.h.in  unsorted_list1.txt
Demo/positional/: pp_intersect.cc
Demo/structure/: base.h  conversions.cc  conversions.h  dictionary.cc  dictionary.h  dictionary_main.cc  inverted_index.cc  inverted_index.h  postings.cc  postings.h  postings_main.cc  token.cc  token.h  vsm_query.h
Demo/tools/: cran_parser.cc  file_iterator.cc  list_converter.cc
Demo/tools/graph/plot/: CMakeLists.txt  heap.cc  heaplog.cc  hp.cc  pr.cc  zipf.cc
Demo/weka_nb/: build.gradle
Demo/weka_nb/src/main/java/: MyClassifier.java
QT/: qt-20182
Resources/: check_relevance.m  demo_cosine.m  demo_df.m  demo_pivoted.m  demo_tf.m  demo_tfidf.m  f_measure.m  p_r_f.m  pr_ap.m  pr_curve.m  pr_curve_interpolated.m  pr_curve_orel.m  pr_demo.m  pr_interp.m  recap-boolean.txt
editor/: Bai 12 Cac phuong phap xay dung chi muc.ppt  Bai 12 Cac phuong phap xay dung chi muc.pptx  Bai 14 Phan lop van ban_p1.ppt  Bai 14 Phan lop van ban_p1.pptx  Bai 23 Thu thap du lieu.pptx  Bai 24 Phan tich lien ket, PageRank.pptx
