cmake_minimum_required(VERSION 3.0)
project(cran)
set(CMAKE_CXX_STANDARD 17)
add_executable(cran cran_parser.cc)
add_subdirectory(thirdparty/googletest)
configure_file(algorithm/resources/files.h.in algorithm/resources/files.h)
foreach(test utilities_ut intersect_ut)
  add_executable(${test} algorithm/${test}.cc)
  target_include_directories(${test} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
  target_link_libraries(${test} gtest_main)
endforeach(test)